[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ChatContainer.gd" type="Script" id=1]

[node name="ChatContainer" type="Control"]
margin_right = 259.0
margin_bottom = 138.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 259.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="Sanitizer" type="RichTextLabel" parent="VBoxContainer"]
visible = false
margin_top = 57.0
margin_right = 259.0
margin_bottom = 110.0
size_flags_vertical = 3
bbcode_enabled = true

[node name="InputLine" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 259.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/InputLine"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "[Chat]"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/InputLine"]
margin_left = 40.0
margin_right = 259.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
[connection signal="focus_entered" from="VBoxContainer/InputLine/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/InputLine/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/InputLine/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/InputLine/LineEdit" to="." method="_on_LineEdit_text_entered"]
